// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Avatar Components Snapshot Avatar should match snapshot 1`] = `
<div>
  <div
    class="relative flex size-8 shrink-0 overflow-hidden rounded-full"
    data-slot="avatar"
    data-testid="avatar-root"
  />
</div>
`;

exports[`Avatar Components Snapshot AvatarFallback should match snapshot 1`] = `
<div>
  <div
    class="bg-muted flex size-full items-center justify-center rounded-full"
    data-slot="avatar-fallback"
    data-testid="avatar-fallback"
  >
    FB
  </div>
</div>
`;

exports[`Avatar Components Snapshot AvatarImage should match snapshot 1`] = `
<div>
  <img
    alt="Test"
    class="aspect-square size-full"
    data-slot="avatar-image"
    data-testid="avatar-image"
    src="/test.jpg"
  />
</div>
`;

exports[`Avatar Components Snapshot Complete Avatar should match snapshot 1`] = `
<div>
  <div
    class="relative flex size-8 shrink-0 overflow-hidden rounded-full"
    data-slot="avatar"
    data-testid="avatar-root"
  >
    <img
      alt="User"
      class="aspect-square size-full"
      data-slot="avatar-image"
      data-testid="avatar-image"
      src="/user.jpg"
    />
    <div
      class="bg-muted flex size-full items-center justify-center rounded-full"
      data-slot="avatar-fallback"
      data-testid="avatar-fallback"
    >
      UA
    </div>
  </div>
</div>
`;
